fim de alterações 2

--- a/src/app/avaliation/componente-postural/componente-postural.component.scss
+++ b/src/app/avaliation/componente-postural/componente-postural.component.scss
@@ -24,6 +24,14 @@
   color: blue;
 }
 
+.mat-tab-group{
+  width: 100%;
+}
+
+.mat-stroked-button {
+  outline: rgba(59, 58, 58, 0.94);
+}
+
 .form-select-sm {
   width: 90px;
 }
