--- a/src/app/avaliation/componente-postural/componente-postural.component.scss
+++ b/src/app/avaliation/componente-postural/componente-postural.component.scss
@@ -27,10 +27,20 @@
 .mat-tab-group{
   width: 100%;
 }
-
-.mat-stroked-button {
-  outline: rgba(59, 58, 58, 0.94);
+::ng-deep{
+    .mat-stroked-button {
+    outline: rgba(59, 58, 58, 0.94) !important;
+  }
+  .mat-stroked-button:not([disabled]) {
+    border-color: rgba(59, 58, 58, 0.94);
+    color: rgba(59, 58, 58, 0.94);
 }
+  .mat-stroked-button:not([disabled]):hover {
+    border-color: rgba(59, 58, 58, 0.94);
+    background-color: rgba(245, 245, 245, 0.555);
+}
+}
+
 
 .form-select-sm {
   width: 90px;
