--- a/src/app/avaliation/componente-postural/componente-postural.component.scss
+++ b/src/app/avaliation/componente-postural/componente-postural.component.scss
@@ -11,6 +11,7 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  color: white;
 
   .h1-title {
     width: 100%;
@@ -36,6 +37,10 @@
   .mat-stroked-button:not([disabled]):hover {
     border-color: rgba(59, 58, 58, 0.94);
     background-color: rgba(245, 245, 245, 0.555);
+  }
+
+  .mat-tab-label {
+    color: white;
   }
 
   .mat-tab-label-active{
